<resources>
    <string name="app_name">NavisUber</string>
    <string name="tv_title">Nhập số điên thoại</string>
    <string name="submit_phone_number">Xác Nhận</string>
    <string name="phone_number">phoneNumber</string>
    <string name="origin">Điểm đón</string>
    <string name="origin_latlng">OriginLatlng</string>
    <string name="origin_lat">originLatitude</string>
    <string name="origin_long">originLongitude</string>
    <string name="destination">Điểm đến</string>
    <string name="destination_latlng">DestinationLatlng</string>
    <string name="destination_lat">destinationLat</string>
    <string name="destination_long">destinationLong</string>
    <string name="google_api_key_map">AIzaSyCcUm5QfKeS1TchRbIy7mDjhbaZgwfxFOs</string>
    <string name="latlng_bound">LatLngBound</string>
    <string name="latlng_arraylist">LatLngArraylist</string>
    <string name="route_wrapper">RouteWrapper</string>
    <string name="car_type">Loại xe</string>
    <string name="pick_up_time">Thời gian đón (ngày/tháng/năm giờ:phút)</string>
    <string name="so_dien_thoai">Số điện thoại liên lạc</string>
    <string name="submit_car_order">Xác nhận đặt xe</string>
    <string name="duration">Duration</string>
    <string name="distance">Distance</string>
    <string name="detail_order">Yêu cầu cụ thể</string>
    <string name="alert_dialog_title">Xem đường đi trên google map</string>
    <string name="alert_dialog_message">Bạn có muốn nhập đầy đủ điểm đón và điểm đến để xem đường đi không ?</string>
    <string name="yes">Có</string>
    <string name="no">Không</string>
    <string name="warning_dialog">Yêu cầu</string>
    <string name="waring_message">Bạn hãy nhập đầy đủ thông tin yêu cầu !</string>
    <string name="ok">OK</string>
    <string name="route_not_found">Không tìm thấy đường đi !</string>
    <string name="list_lat_lng_bound">ListLatLngBound</string>
    <string name="latlng_point_arraylist">LatLngPointArrayList</string>
    <string name="send_order">Gửi yêu cầu</string>
    <string name="order">carOrder</string>
    <string name="webservice_signup">http://navistargsht.cloudapp.net:6004/Service1.svc/UserSignUp</string>
    <string name="webservice_url">http://navistargsht.cloudapp.net:6004/Service1.svc/CarOrderRequestReceiver</string>
    <string name="webservice_get_car_type_url">http://navistargsht.cloudapp.net:6004/Service1.svc/GetCarType</string>
    <string name="webservice_get_car_location">http://navistargsht.cloudapp.net:6004/Service1.svc/GetCarLocation?carId=</string>
    <string name="webservice_get_waiting_orders">http://navistargsht.cloudapp.net:6004/Service1.svc/GetOrders?sdt_nguoi_dat=</string>
    <string name="webservice_cancel_order">http://navistargsht.cloudapp.net:6004/Service1.svc/CancelOrder</string>
    <string name="webservice_finished_confirm">http://navistargsht.cloudapp.net:6004/Service1.svc/FinishedConfirm</string>
    <string name="webservice_response">Thông báo gửi yêu cầu</string>
    <string name="webservice_response_success">Yêu cầu xe thành công !</string>
    <string name="webservice_response_fail">Yêu cầu xe thất bại !</string>
    <string name="server_name">navistargsht.cloudapp.net:1434</string>
    <string name="database_name">NavisUber</string>
    <string name="username">sa</string>
    <string name="password">Navis123</string>
    <string name="waiting_dialog_message">Chờ xử lí yêu cầu trong: </string>
    <string name="resend_order">Gửi lại yêu cầu</string>
    <string name="success_response">Success</string>
    <string name="phone_number_already_exist">Phone Number Is Already Exist</string>
    <string name="fail_response">Fail</string>
    <string name="json_origin">originPlace</string>
    <string name="json_destination">destinationPlace</string>
    <string name="json_cartype">carType</string>
    <string name="json_order_time">orderTime</string>
    <string name="json_pickup_time">pickupTime</string>
    <string name="json_phone_number">phoneNumber</string>
    <string name="refreshed_token">refreshed_token</string>
    <string name="notification_data">data</string>
    <string name="notification_title">title</string>
    <string name="notification_body">body</string>
    <string name="order_information">Thông tin đặt xe</string>
    <string name="waiting_for_handle">Đợi gán xe</string>
    <string name="waiting_for_car">Đợi xe</string>
    <string name="history">Lịch sử</string>
    <string name="distance_duration">Khoảng cách - thời gian</string>
    <string name="Name">Họ và tên</string>
    <string name="Email">email</string>
    <string name="PhoneNumber">Số điện thoại</string>
    <string name="submit_signup">Gửi đăng kí</string>
    <string name="email_hint">abc@gmail.com</string>
    <string name="signup_phonenumber">PhoneNumber</string>
    <string name="signup_name">Name</string>
    <string name="signup_email">Email</string>
    <string name="signup_tokenid">TokenId</string>
    <string name="signup_response">Thông báo đăng kí</string>
    <string name="signup_success">Đăng kí thành công !</string>
    <string name="signup_confirm">Xác nhận đăng kí</string>
    <string name="signup_fail">Đăng kí thất bại !</string>
    <string name="car_location">Vị trí của xe</string>
    <string name="fragment_title">Vị trí xe</string>
    <string name="cancel_order">Xác nhận hủy chuyến</string>
    <string name="cancel_response">Thông báo hủy chuyến</string>
    <string name="cancel_success">Yêu cầu hủy chuyến thành công, chờ xử lí của admin</string>
    <string name="cancel_fail">Yêu cầu hủy chuyến thất bại</string>
    <string name="finished_confirm_response">Thông báo xác nhận hoàn thành chuyến</string>
    <string name="finished_confirm_success">Xác nhận hoàn thành chuyến thành công</string>
    <string name="finished_confirm_fail">Không thể xác nhận hoàn thành chuyến trước thời điểm khởi hành</string>
    <string name="btn_date">Ngày khởi hành</string>
    <string name="btn_time">Giờ khởi hành</string>
    <string name="edit_user">Sửa thông tin cá nhân</string>
</resources>
